--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p id="wins-text"></p>
         <p id="losses-text"></p>
     </div>
-    <script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/game2.js"></script>
 
       
 </body>
