--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>The Psychic Game!</h1>
         <img id="crystal" src="assets/images/crystal-ball.jpg" alt="crystal-ball">
         <h5 id="directions">Guess the letter I'm thinking of....</h5>
+        <h6 id="winner-text"></h6>
         <p id="userchoice-text"></p>
         <p id="computerchoice-text"></p>
         <p id="pastGuesses-text"></p>
@@ -21,7 +22,7 @@
         <p id="wins-text"></p>
         <p id="losses-text"></p>
     </div>
-    <script src="assets/javascript/game2.js"></script>
+    <script src="assets/javascript/game.js"></script>
 
       
 </body>
